fix documentId -> id
